AnthemCode/objects/Event_Templates__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Event Templates</relationshipLabel>
        <relationshipName>Event_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Followup_Template_ID__c</fullName>
        <label>Followup Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followup_Template__c</fullName>
        <label>Followup Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation_Template_ID__c</fullName>
        <label>Invitation Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation_Template__c</fullName>
        <label>Invitation Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Template_ID__c</fullName>
        <label>Registration Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Template__c</fullName>
        <label>Registration Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Template_ID__c</fullName>
        <label>Reminder Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Template__c</fullName>
        <label>Reminder Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_you_Id__c</fullName>
        <label>Thank you Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_you_template_id__c</fullName>
        <label>Thank you template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Template</label>
    <nameField>
        <displayFormat>ET-{00000}</displayFormat>
        <label>Event Template</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>